# aaronmarkey.github.io

./: .gitignore  .pymarkdown  404.html  CNAME  Gemfile  LICENSE.txt  README.md  _config.yml  about.html  about.md  blog.html  index.html  mechanica-ui.gemspec  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  robots.txt  sitemap.xml  tasks.py  webpack.config.js
_includes/: head.html  header.html  menu.html  nameplate.html  overlay.html  pagination.html  picker.html  scripts.html  story.html
_layouts/: default.html  error.html  home.html  post.html
_posts/: 2015-11-30-mechanica-manifesto.md  2017-02-01-a-journey-to-less.md  2018-10-01-and-were-back.md  2018-12-04-thoughts-on-markdown.md  2018-12-10-javascript-idiot.md  2019-02-06-creative-gatekeeping.md  2023-09-25-lucid-ltt-and-neat.md
_sass/: initialize.scss  style.scss
assets/: main-bundle.js  main.css
content/: 2015-11-30-mechanica-manifesto.md  2017-02-01-a-journey-to-less.md  2018-10-01-and-were-back.md  2018-12-10-javascript-idiot.md  2019-02-06-creative-gatekeeping.md  2023-09-25-lucid-ltt-and-neat.md
feeds/: index.atom.xml
js_src/: main.js
page/: 2.html
someperson/: __init__.py  configuration.py  exceptions.py  framework.py  utils.py
stuff/: misc.html  shokunin.html  tech.html
theme/: main.0779b0be55c296baec34.css  main.31f3252bd883a7bc85e1.css  main.31f3252bd883a7bc85e1.js  main.4049687e2c7c81c096bc.js  main.4602e5729175518c4b45.js  main.4e71e1ecf51cb1e35e18.css  main.4e71e1ecf51cb1e35e18.js  main.5e57c06134ec106b3912.css  main.5e57c06134ec106b3912.js  (+23 more)
(+98 files in other folders)
